#291 - 400 Error on POST /search of folders - lock file not removed and impacting request